# InfoBot

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  memory.db  migrate_add_region.py  mypy.ini  package.json  pyproject.toml  pytest.ini  render.yaml  requirements.txt  ruff.toml  scraped_whitesands.txt
.github/workflows/: ci.yml  deploy.yml  pytest.yml  test.yml
apps/pension_guru/: config.json  extract.py  extract_user_data.py  pension_calculator.py
backend/: README.md  app_factory.py  gpt_engine.py  logging_config.py  main.py  memory.db  memory.py  models.py  repository.py  requirements.txt  test_prompt.py  verify_app_setup.py
backend/apps/: .gitignore  README.MD  base_app.py
backend/apps/concierge/: README.md  app.py  concierge_api.py  concierge_gpt.py  config.json  extract.py  facebook_feed.py  gpt_engine.py  intent_gpt.py  links.txt  (+4 more)
backend/cache/: whitesands_facts.json
backend/intents/: intent_detector.py
backend/public/: chat.js
frontend/: README.md  package-lock.json
hooks/: pre-commit-pytest.ps1  pre-commit-pytest.sh  pre-commit.sh
infobot/: infobot_file_list.txt  package-lock.json  render-build.sh  requirements.txt
infobot/backend/: forget_everything.py  gpt_engine.py  memory.py  models.py  verify_app_setup.py
infobot/cache/: README.md
infobot/intents/: intent_detector.py
public/: chat.js  index.html
tests/: test_api_contract.py  test_concierge.py  test_extract.py  test_intent_detector.py  test_memory.py  test_ocr.py  test_plugin_contracts.py  test_repository.py  test_scraper.py  test_static_assets.py
(+26 files in other folders)
